--- a/index.html
+++ b/index.html
@@ -995,8 +995,8 @@
                 </div>
             </div>
 
-            <!-- Download Section -->
-            <div class="download-section">
+           <!-- Download Section -->
+            <!--<div class="download-section">
                 <h3 style="color: #2c3e50; margin-bottom: 20px; font-size: 1.4rem;">Download Resume</h3>
                 <button class="download-btn" onclick="downloadResume()">
                     📄 Download as Word Document
@@ -1004,7 +1004,19 @@
                 <p style="margin-top: 15px; color: #6c757d; font-size: 0.9rem;">
                     Click to download this resume in Microsoft Word format
                 </p>
-            </div>
+            </div>-->
+			<!-- Download Section -->
+			<div class="download-section">
+				<h3 style="color: #2c3e50; margin-bottom: 20px; font-size: 1.4rem;">Download Resume</h3>
+				<a href="Vaibhav_Keni_Resume.doc" download="Vaibhav_Keni_Resume.doc">
+					<button class="download-btn">
+						📄 Download as Word Document
+					</button>
+				</a>
+				<p style="margin-top: 15px; color: #6c757d; font-size: 0.9rem;">
+					Click to download this resume in Microsoft Word format
+				</p>
+			</div>
         </div>
     </div>
 
