Remove word file changes in education

--- a/index.html
+++ b/index.html
@@ -946,14 +946,14 @@
                             <div class="degree">Bachelor of Science in Information Technology | Grade: B+</div>
                             <div class="institution">2020 | M. L. Dahanukar College,Vileparle | Mumbai  </div>
                         </div>
-                        <div class="education-item">
+                        <!--<div class="education-item">
                             <div class="degree">Higher Secondary Certificate (HSC) - Science Stream | 54%</div>
                             <div class="institution">2017 | Patkar-Varde College, Goregaon | Mumbai</div>
                         </div>
                         <div class="education-item">
                             <div class="degree">Secondary School Certificate (SSC) | 80.20%</div>
                             <div class="institution">2015 | NGK Gokhale High School, Borivali | Mumbai</div>
-                        </div>
+                        </div>-->
 
                         <h3 style="color: #2c3e50; margin: 30px 0 20px 0; font-size: 1.3rem;">Languages</h3>
                         <div class="languages-grid">
@@ -1008,13 +1008,13 @@
 			<!-- Download Section -->
 			<div class="download-section">
 				<h3 style="color: #2c3e50; margin-bottom: 20px; font-size: 1.4rem;">Download Resume</h3>
-				<a href="Vaibhav_Keni_Resume.doc" download="Vaibhav_Keni_Resume.doc">
+				<a href="Vaibhav_Keni_Resume.pdf" download="Vaibhav_Keni_Resume.pdf">
 					<button class="download-btn">
-						📄 Download as Word Document
+						📄 Download as PDF Document
 					</button>
 				</a>
 				<p style="margin-top: 15px; color: #6c757d; font-size: 0.9rem;">
-					Click to download this resume in Microsoft Word format
+					Click to download this resume in PDF format
 				</p>
 			</div>
         </div>
