Changes for latest experience eperiod change

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                     <div class="job-positions">
                         <div class="job-position">
                             <div class="job-title">Senior Full Stack Developer & IT Systems Administrator</div>
-                            <div class="date-location">April 2024 – Present</div>
+                            <div class="date-location">April 2024 – September 2025</div>
                             <div class="job-description">
                                 <ul>
                                     <li>Lead development team in building enterprise-grade tax compliance applications using Java, Spring Boot, and AngularJS</li>
